Speed is Km/H, Distance is Km.

--- a/doc/unfit.1
+++ b/doc/unfit.1
@@ -8,10 +8,17 @@ unfit - extract useful information from FIT files.
 Process FIT file(s) to extract the useful information.
 .PP
 .IP "The following data is extracted if available:"
-Heart-rate
-Speed
-Cadence
+Heart-rate (bpm)
+.br
+Speed (kmph)
+.br
+Cadence (rpm)
+.br
 Altitude
+.br
+Distance (km)
+.br
+Temperature (ºC)
 .SH OPTIONS
 .IP "-o <file>"
 Output CSV data to <file> rather than to stdout.
